20011028
 - (djm) Avoid bug in Solaris PAM libs
 - (djm) Disconnect if no tty and PAM reports password expired
 - (djm) Fix for PAM password changes being echoed (from stevesk)

20011027
 - (tim) [configure.ac] Fixes for ReliantUNIX (don't use libucb)
   Patch by Robert Dahlem <Robert.Dahlem@siemens.com>

20011026
 - (bal) Set the correct current time in login_utmp_only().  Patch by
   Wayne Davison <wayned@users.sourceforge.net>
 - (tim) [scard/Makefile.in] Fix install: when building outside of source
	 tree and using --src=/full_path/to/openssh
	 Patch by Mark D. Baushke <mdb@juniper.net>

20011025
 - (bal) Use VDISABLE if _POSIX_VDISABLE is set in readpassphrase.c.  Patch
   by todd@
 - (tim) [configure.ac] Give path given in --with-xxx= for pcre,zlib, and
	 tcp-wrappers precedence over system libraries and includes.
	 Report from Dave Dykstra <dwd@bell-labs.com>

20011024
 - (bal) Should be 3.0p1 not 3.0p2.  Corrected version.h already.
 - (tim) configure.in -> configure.ac

20011023
 - (bal) Updated version to 3.0p1 in preparing for release.
 - (bal) Added 'PAM_TTY_KLUDGE' to Solaris platform.
 - (tim) [configure.in] Fix test for broken dirname. Based on patch from
	 Dave Dykstra <dwd@bell-labs.com>. Remove un-needed test for zlib.h.
	 [contrib/caldera/openssh.spec, contrib/redhat/openssh.spec,
	 contrib/suse/openssh.spec] Update version to match version.h

20011022
 - (djm) Fix fd leak in loginrec.c (ro fd to lastlog was left open).
   Report from Michal Zalewski <lcamtuf@coredump.cx>

20011021
 - (tim) [configure.in] Clean up library testing. Add optional PATH to
	 --with-pcre, --with-zlib, and --with-tcp-wrappers. Based on
	 patch by albert chin (china@thewrittenword.com)
	 Re-arange AC_CHECK_HEADERS and AC_CHECK_FUNCS for eaiser reading
	 of patches to configure.in. Replace obsolete AC_STRUCT_ST_BLKSIZE
	 with AC_CHECK_MEMBERS. Add test for broken dirname() on
	 Solaris 2.5.1 by Dan Astoorian <djast@cs.toronto.edu>